@@ -6,14 +6,13 @@ import com.example.shoppingpoint.cli.utils.CLIReader;
 import com.example.shoppingpoint.exception.*;
 
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 public class CLIApplication {
     public static void main(String[] args) throws EmailException, BoundaryException, BeanException, ControllerException, IOException, DatabaseException {
         System.out.println("Shopping Point CLI");
 
-        int selected = CLIReader.multiChoice(Arrays.asList("Login", "Register"));
+        int selected = CLIReader.multiChoice(List.of("Login", "Register"));
         switch (selected) {
             case 1 -> {
                 LoginGraphicControllerCLI loginCli = new LoginGraphicControllerCLI();
